# redreply

./: .gitattributes  .gitignore  CQP.lib  Cargo.toml  Dockerfile  aaaa.md  build.rs  readme.md  redlang.json
.cargo/: config  config.toml
.github/workflows/: build.yml  test_android_build.yml
buildrc/: redreply.rc
crates/redreply-adapter/: Cargo.toml  PROTOCOL.md  README.md
crates/redreply-adapter/src/: cqapi.rs  cqevent.rs  email.rs  host.rs  httpevent.rs  kook.rs  lib.rs  onebot11.rs  onebot115.rs  qq_guild_all.rs  qqguild_private.rs  qqguild_public.rs  redlang.rs  satoriv1.rs  telegram.rs  yunhuv1.rs
crates/redreply-adapter/src/mytool/: mod.rs
doc/: readme.md
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
docs/adaptar/: README.md
docs/detailref/: README.md  README_SIMPLE.md
docs/download/: README.md
docs/example/: README.md
docs/idea/: README.md
docs/mqtt/: README.md
docs/onebot/: README.md
docs/pgsql/: README.md
ovo_start_file/: app.json  main.py
res/: axios.js  crontool.html  custom_editor.css  custom_editor.vue  debug.html  edit_view.htm  fetch-utils.js  gobal_filter.html  gobal_init.html  help.html  index.html  index_new.html  index_old.html  login.html  minimal.htm  obconnect.html  pkg_edit.html  pluscenter.html  quill-setup.js  readme.html  schulte.html  script.js  style.css  theme.css  theme.js  up.html  uploadpkg.html  vue-quill.js  vue-quill.snow.prod.css  vue.js  vue3-sfc-loader.min.js  watchlog.html
res/live2d/: pio.js
res/live2d/models/pio/: model1.json  model2.json  model3.json
script/: upload_web.py
src/: build.rs  lib.rs  main.rs
src/botconn/: email.rs  kook.rs  mod.rs  ntqqv1.rs  onebot11.rs  onebot115.rs  qq_guild_all.rs  qqguild_private.rs  qqguild_public.rs  satoriv1.rs  telegram.rs  yunhuv1.rs
src/cqapi/: mod.rs
src/cqevent/: do_group_inc.rs  do_group_msg.rs  do_guild_msg.rs  do_other_evt.rs  do_private_msg.rs  mod.rs
src/cronevent/: mod.rs
src/httpevent/: mod.rs
src/httpserver/: mod.rs
src/initevent/: mod.rs
src/libload/: mod.rs
src/mqttclient/: mod.rs
src/mytool/: all_to_silk.rs  deal_flac.rs  deal_ogg.rs  deal_silk.rs  mod.rs  mp3_deal.rs  wav_deal.rs  wav_to_pcm.rs
src/onebot11s/: mod.rs
src/openapi/: mod.rs
src/pgsql/: mod.rs
src/pluscenter/: mod.rs
src/pyserver/: mod.rs
src/redlang/: aifun.rs  astparser.rs  cqexfun.rs  exfun.rs  mod.rs  persistent_value_codec.rs  webexfun.rs
src/status/: mod.rs
src/test/: mod.rs
