[package]
name = "redlang"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
encoding = "0.2.33"
getrandom = "0.2.12"
base64 = "0.21.7"
serde_json = "1.0.114"
serde_derive = "1.0.197"
serde = {version = "1.0.197",features = ["derive"]}
uuid = {version = "1.8.0",features = ["v4","fast-rng"]}
lazy_static = "1.4.0"
chrono = "0.4.35"
md-5 = "0.10.6"
rcnb-rs = "0.1.0"
rust-embed="6.8.1"
image = "0.24.9"
imageproc = "0.23.0"
gif = "0.12.0"
cron = "0.12.1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
futures-util = "0.3.30"
hyper-tungstenite = "0.13.0"
tokio-tungstenite = { version = "0.21.0", default-features = false, features = ["rustls-tls-webpki-roots"] }
scopeguard = "1.2.0"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter","time","local-time"]}
opener = "0.6.1"
rusqlite = {version = "0.29.0",features = ["bundled","functions"]}
sevenz-rust = "0.4.3"
jsonpath-rust = "0.3.5"
rusttype = "0.9.3"
# markdown = "1.0.0-alpha.7"
reqwest = {version = "0.11.27",default-features = false,features = ["native-tls-vendored","multipart"]}
time = { version = "0.3.34", features = ["formatting", "macros"] }
# headless_chrome = {version="1.0.5",default-features = false}
webp = "0.2.6"
sysinfo = "0.30.7"
resvg = { version = "0.36.0", default-features = false, features = [ "text", "raster-images"  ] }
fontdb = { version = "0.15.0", default-features = false, features = [ "fs" ] }
flate2 = { version = "1.0.28",default-features = false}
zhconv = {version  = "0.3.1", features = ["opencc","compress"]}
async-trait = "0.1.78"
tl = "0.7.8"
html-escape = "0.2.13"
libloading = "0.8.3"
tokio-util = { version = "0.7.10", default-features = false, features = [ "io" ] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.6.0"
zip = "0.6.6"
crc64 = "2.0.0"
headless_chrome = "1.0.9"
path-clean = "1.0.1"
rust-ini = "0.21.0"
mlua = { version = "0.9.7", features = ["luajit", "vendored"] }

[build-dependencies]
embed-resource = "2.4.2"


[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
xcap = "0.0.4"
winconsole = "0.11.1"
tray-icon = "0.13.0"
fltk = "1.4.26"

[workspace.metadata.cross.target.i686-unknown-linux-musl]
pre-build = [
	"apt-get update && apt-get --assume-yes install build-essential",
	"apt-get update && apt-get --assume-yes install gcc-multilib"
]



[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

